--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!--=============== BOXICONS CDN ===============-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
+
     <!--=============== CSS FILES ===============-->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/breakpoints.css">
@@ -21,23 +22,47 @@
     <title>PORTEN</title>
 
 </head>
+
 <body>
     <header>
         <div class="container">
             <div class="header-upper-wrap">
                 <div class="header-phone-wrap">
-                    <img src="svg/phone-svg.svg" alt=""><a href="#!"></a></img>
-                    <a class="header-number" href="">8 (812) 123-45-67    </a>
-                    <p class="header-worktime">Работаем 7 дней в неделю    </p>
+                    <a href="#!"><img src="svg/phone-svg.svg" alt=""></a>
+                    <a class="header-number" href="">8 (812) 123-45-67 </a>
+                    <p class="header-worktime">Работаем 7 дней в неделю </p>
                     <p class="header-nmb">9:00-18:00</p>
                 </div>
                 <div class="header-open-wrap">
-                    <img src="svg/open-svg.svg" alt="#!"><a href=""></a></img>
+                    <a class="open-img" href="#!"><img src="svg/open-svg.svg" alt=""></a>
                     <a class="enter-a" href="#!">Войти / Регистрация</a>
                 </div>
             </div>
         </div>
+        <div class="header-bottom-wrap">
+            <div class="container">
+                <nav class="header-nav">
+                    <a href="#" class="menu-toggle"><i class='bx bx-menu'></i></a>
+                    <a href="#!"><img src="img/site-logo.png" alt=""></a>
+                    <ul class="header-list">
+                        <li class="header-item"><a class="header-link" href="#!">Понравилось</a></li>
+                        <li class="header-item"><a class="header-link" href="#!">личный кабинет</a></li>
+                        <li class="header-item"><a class="header-link" href="#!">настройки</a></li>
+                        <div class="header-img-wrap">
+                            <a class="" href="#!"><img src="svg/shop-svg.svg" alt="#!"></a>
+                            <a href="#!"><img src="svg/search-svg.svg" alt="#!"></a>
+                        </div>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
-    
+
+
+
+
+
+   
 </body>
+
 </html>
