--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div class="header-bottom-wrap">
             <div class="container">
                 <nav class="header-nav">
-                    <a href="#" class="menu-toggle"><i class='bx bx-menu'></i></a>
                     <a class="site-logo" href="#!"><img src="img/site-logo.png" alt=""></a>
+                    <a href="#" class="menu-toggle"><i class='bx bx-menu'></i></a>
                     <ul class="header-list">
                         <li class="header-item"><a class="header-link" href="#!">Понравилось</a></li>
                         <li class="header-item"><a class="header-link" href="#!">личный кабинет</a></li>
@@ -68,13 +68,8 @@
                 </div>
             </div>
             <div class="porten-boxxer">
-                <p class="porten-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum purus,
-                    est tortor <br> pulvinar ut
-                    in. Fringilla a diam enim sed justo, sed iaculis sagittis. Tortor id eu interdum <br> nec ut
-                    iaculis.
-                    Penatibus ullamcorper ultricies morbi ipsum sem metus pharetra, mi. <br> Tortor nibh magna feugiat
-                    id
-                    nunc, dui nisl viverra.</p>
+                <p class="porten-text">
+                    Этот сайт был создан Хусаном для класса 9.b</p>
             </div>
         </div>
 
@@ -169,65 +164,85 @@
             <div class="new-boxxer">
                 <div class="new-box">
                     <div class="new-wrap">
-                        <img src="img/watch-img.png" alt="">
+                        <img class="watch-mg" src="img/watch-img.png" alt="">
+                        <div class="shop-wrap">
+                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                        </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
                     <p class="new-text">165 000 руб.</p>
                 </div>
                 <div class="new-box">
                     <div class="new-wrap">
-                        <img src="img/watch-img.png" alt="">
+                        <img class="watch-mg" src="img/watch-img.png" alt="">
+                        <div class="shop-wrap">
+                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                        </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
                     <p class="new-text">165 000 руб.</p>
                 </div>
                 <div class="new-box">
                     <div class="new-wrap">
-                        <img src="img/watch-img.png" alt="">
+                        <img class="watch-mg" src="img/watch-img.png" alt="">
+                        <div class="shop-wrap">
+                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                        </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
                     <p class="new-text">165 000 руб.</p>
                 </div>
-
                 <div class="new-box">
                     <div class="new-wrap">
-                        <img src="img/watch-img.png" alt="">
+                        <img class="watch-mg" src="img/watch-img.png" alt="">
+                        <div class="shop-wrap">
+                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                        </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
                     <p class="new-text">165 000 руб.</p>
                 </div>
-
                 <div class="new-box">
                     <div class="new-wrap">
-                        <img src="img/watch-img.png" alt="">
+                        <img class="watch-mg" src="img/watch-img.png" alt="">
+                        <div class="shop-wrap">
+                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                        </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
                     <p class="new-text">165 000 руб.</p>
                 </div>
-
                 <div class="new-box">
                     <div class="new-wrap">
-                        <img src="img/watch-img.png" alt="">
+                        <img class="watch-mg" src="img/watch-img.png" alt="">
+                        <div class="shop-wrap">
+                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                        </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
                     <p class="new-text">165 000 руб.</p>
                 </div>
-
                 <div class="new-box">
                     <div class="new-wrap">
-                        <img src="img/watch-img.png" alt="">
+                        <img class="watch-mg" src="img/watch-img.png" alt="">
+                        <div class="shop-wrap">
+                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                        </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
                     <p class="new-text">165 000 руб.</p>
                 </div>
-
                 <div class="new-box">
                     <div class="new-wrap">
-                        <img src="img/watch-img.png" alt="">
+                        <img class="watch-mg" src="img/watch-img.png" alt="">
+                        <div class="shop-wrap">
+                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                        </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
                     <p class="new-text">165 000 руб.</p>
                 </div>
+    
             </div>
 
         </div>
@@ -256,11 +271,11 @@
                 <div class="footer-upper-wrap">
                     <div class="footer-text-box">
                         <h4 class="footer-title">О магазине</h4>
-                        <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi <br> semper
-                            viverra nunc cursus tortor lectus nunc nulla nibh. <br> Egestas amet consectetur vel vitae
-                            aliquam dictum <br>  suspendisse. Lobortis eget consequat, tellus et et sed <br>turpis. Pretium
-                            quisque vitae, amet, porttitor odio ultricies <br> massa pharetra leo. Et ipsum urna fames in sit
-                            mi ultrices <br> nisi, nunc.</p>
+                        <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi semper
+                            viverra nunc cursus tortor lectus nunc nulla nibh. Egestas amet consectetur vel vitae
+                            aliquam dictum suspendisse. Lobortis eget consequat, tellus et et sed turpis. Pretium
+                            quisque vitae, amet, porttitor odio ultricies massa pharetra leo. Et ipsum urna fames in sit
+                            mi ultrices nisi, nunc.</p>
                     </div>
                     <div class="footer-shop">
                         <h4 class="footer-title2">Категории</h4>
@@ -273,17 +288,25 @@
                         </div>
                     </div>
                     <div class="footer-button-wrap">
-                        <h4 class="footer-title3">РАссылка</h4>
+                        <h4 class="footer-title3">РАССЫЛКА</h4>
                         <p class="footer-text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi semper
                             viverra nunc cursus tortor
                             lectus nunc nulla nibh.
                         </p>
-                        <div class="footer-btn-wrap">
-                            <button class="primary-button" type="button">Ваша почта</button>
-                            <button class="secondary-button" type="button">ПОДПИСАТЬСЯ</button>
-                        </div>
+                        <form class="footer-btn-wrap">
+                            <input type="email" required placeholder="Ваша почта">
+                            <button class="secondary-button" type="submit">ПОДПИСАТЬСЯ</button>
+                        </form>
                     </div>
 
+                </div>
+            </div>
+        </div>
+        <div class="footer2">
+            <div class="container">
+                <div class="mail-wrap">
+                    <a class="mail-a" href="#!">© 2020 Все права защищены</a>
+                    <a class="mail-b" href="#!">Сделано Figma.info</a>
                 </div>
             </div>
         </div>
