--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </nav>
             </div>
         </div>
-    </header>
+    </header>c
 
     <section class="porten">
         <div class="porten-wrapper">
@@ -83,33 +83,46 @@
                     <div class="left-img-wrap">
                         <img src="img/line2.png" alt="">
                     </div>
-
                 </div>
                 <div class="left-boxxer">
                     <div class="left-box">
                         <div class="img-wrap">
-                            <img src="img/watch-img.png" alt="">
+                            <img class="watch-pict" src="img/watch-img.png" alt="">
+                            <div class="img-wrap2">
+                                <a href=""><img class="store-img" src="svg/shop-svg.svg" alt=""></a>
+                            </div>
                         </div>
                         <h4 class="left-subtitle">Louis XVI ATHOS</h4>
                         <p class="left-text">165 000 руб.</p>
                     </div>
                     <div class="left-box">
                         <div class="img-wrap">
-                            <img src="img/watch-img.png" alt="">
+                            <img class="watch-pict" src="img/watch-img.png" alt="">
+                            <div class="img-wrap2">
+                                <a href=""><img class="store-img" src="svg/shop-svg.svg" alt=""></a>
+                            </div>
                         </div>
                         <h4 class="left-subtitle">Louis XVI ATHOS</h4>
                         <p class="left-text">165 000 руб.</p>
                     </div>
                     <div class="left-box">
                         <div class="img-wrap">
-                            <img src="img/watch-img.png" alt="">
+                            <img class="watch-pict" src="img/watch-img.png" alt="">
+                            <div class="img-wrap2">
+                                <a href=""><img class="store-img" src="svg/shop-svg.svg" alt=""></a>
+                            </div>
                         </div>
                         <h4 class="left-subtitle">Louis XVI ATHOS</h4>
                         <p class="left-text">165 000 руб.</p>
                     </div>
                 </div>
-
             </div>
+
+
+
+
+
+
             <div class="sezon-right">
                 <div class="right-wrapper">
                     <h4 class="right-title">Новая коллекция</h4>
@@ -166,7 +179,7 @@
                     <div class="new-wrap">
                         <img class="watch-mg" src="img/watch-img.png" alt="">
                         <div class="shop-wrap">
-                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                            <a href=""><img class="shop-img" src="svg/shop-svg.svg" alt=""></a>
                         </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
@@ -176,7 +189,7 @@
                     <div class="new-wrap">
                         <img class="watch-mg" src="img/watch-img.png" alt="">
                         <div class="shop-wrap">
-                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                            <a href=""><img class="shop-img" src="svg/shop-svg.svg" alt=""></a>
                         </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
@@ -186,7 +199,7 @@
                     <div class="new-wrap">
                         <img class="watch-mg" src="img/watch-img.png" alt="">
                         <div class="shop-wrap">
-                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                            <a href=""><img class="shop-img" src="svg/shop-svg.svg" alt=""></a>
                         </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
@@ -196,7 +209,7 @@
                     <div class="new-wrap">
                         <img class="watch-mg" src="img/watch-img.png" alt="">
                         <div class="shop-wrap">
-                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                            <a href=""><img class="shop-img" src="svg/shop-svg.svg" alt=""></a>
                         </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
@@ -206,7 +219,7 @@
                     <div class="new-wrap">
                         <img class="watch-mg" src="img/watch-img.png" alt="">
                         <div class="shop-wrap">
-                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                            <a href=""><img class="shop-img" src="svg/shop-svg.svg" alt=""></a>
                         </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
@@ -216,7 +229,7 @@
                     <div class="new-wrap">
                         <img class="watch-mg" src="img/watch-img.png" alt="">
                         <div class="shop-wrap">
-                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                            <a href=""><img class="shop-img" src="svg/shop-svg.svg" alt=""></a>
                         </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
@@ -226,7 +239,7 @@
                     <div class="new-wrap">
                         <img class="watch-mg" src="img/watch-img.png" alt="">
                         <div class="shop-wrap">
-                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                            <a href=""><img class="shop-img" src="svg/shop-svg.svg" alt=""></a>
                         </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
@@ -236,13 +249,13 @@
                     <div class="new-wrap">
                         <img class="watch-mg" src="img/watch-img.png" alt="">
                         <div class="shop-wrap">
-                            <img class="shop-img" src="svg/shop-svg.svg" alt="">
+                            <a href=""><img class="shop-img" src="svg/shop-svg.svg" alt=""></a>
                         </div>
                     </div>
                     <h4 class="new-subtitle">Louis XVI ATHOS</h4>
                     <p class="new-text">165 000 руб.</p>
                 </div>
-    
+
             </div>
 
         </div>
@@ -275,7 +288,8 @@
                             viverra nunc cursus tortor lectus nunc nulla nibh. Egestas amet consectetur vel vitae
                             aliquam dictum suspendisse. Lobortis eget consequat, tellus et et sed turpis. Pretium
                             quisque vitae, amet, porttitor odio ultricies massa pharetra leo. Et ipsum urna fames in sit
-                            mi ultrices nisi, nunc.</p>
+                            mi ultrices nisi, nunc.
+                        </p>
                     </div>
                     <div class="footer-shop">
                         <h4 class="footer-title2">Категории</h4>
@@ -294,8 +308,10 @@
                             lectus nunc nulla nibh.
                         </p>
                         <form class="footer-btn-wrap">
-                            <input type="email" required placeholder="Ваша почта">
-                            <button class="secondary-button" type="submit">ПОДПИСАТЬСЯ</button>
+                            <input class="footer-input" type="email" required placeholder="Ваша почта">
+                            <div class="btn-wrap">
+                                <button class="secondary-button" type="submit">ПОДПИСАТЬСЯ</button>
+                            </div>
                         </form>
                     </div>
 
